Update custom-wallet
